# Localization

./: README.md  usefullCommands.txt
amclLocal/: amcl_test.m  lidar_data_vis.mlx  map_from_pgm.m  send_map.m  send_to_gpu.m
amclLocal/jetsonBackup/catkin_ws/devel/: .catkin  setup.sh
amclLocal/jetsonBackup/catkin_ws/devel/lib/amcl_test/: amcl_test  amcl_test.orginal
amclLocal/jetsonBackup/catkin_ws/devel/lib/mandelbrot_populate/: mandelbrot_populate
amclLocal/jetsonBackup/catkin_ws/devel/lib/pkgconfig/: amcl_test.pc  mandelbrot_populate.pc  rs_rplidar.pc  test_launch.pc
amclLocal/jetsonBackup/catkin_ws/devel/share/amcl_test/cmake/: amcl_testConfig.cmake
amclLocal/jetsonBackup/catkin_ws/devel/share/mandelbrot_populate/cmake/: mandelbrot_populateConfig.cmake
amclLocal/jetsonBackup/catkin_ws/devel/share/rs_rplidar/cmake/: rs_rplidarConfig.cmake
amclLocal/jetsonBackup/catkin_ws/devel/share/test_launch/cmake/: test_launchConfig.cmake
amclLocal/jetsonBackup/catkin_ws/src/amcl_test/: CMakeLists.txt  packageInfo.mat
amclLocal/jetsonBackup/catkin_ws/src/amcl_test/include/amcl_test/: CircularBuffer.h  CircularBufferIndex.h  MapLayer.h  MonteCarloLocalizationBuildable.h  MonteCarloLocalizationBuiltins.h  Publisher.h  SharedMapProperties.h  SpecialMsgUtil.h  Subscriber.h  TransformationTree.h  amcl_test.h  amcl_test_data.h  amcl_test_initialize.h  amcl_test_rtwutil.h  amcl_test_terminate.h  amcl_test_types.h  binaryOccupancyMap.h  geometry_msgs_PointStampedStruct.h  geometry_msgs_PointStruct.h  geometry_msgs_PoseStruct.h  geometry_msgs_QuaternionStruct.h  geometry_msgs_TransformStampedStruct.h  geometry_msgs_TransformStruct.h  geometry_msgs_Vector3Struct.h  ixfun.h  lidarScan.h  likelihoodFieldSensorModel.h  mlroscpp_msgconvert_utils.h  mod.h  monteCarloLocalization.h  nav_msgs_MapMetaDataStruct.h  nav_msgs_OccupancyGridStruct.h  odometryMotionModel.h  quat2eul.h  rosReadBinaryOccupancyGrid.h  rosReadCartesian.h  rosReadScanAngles.h  ros_TimeStruct.h  rtGetInf.h  rtGetNaN.h  (+8 more)
amclLocal/jetsonBackup/catkin_ws/src/amcl_test/src/: CircularBuffer.cpp  MapLayer.cpp  MonteCarloLocalizationBuildable.cpp  MonteCarloLocalizationBuiltins.cpp  Publisher.cpp  SpecialMsgUtil.cpp  Subscriber.cpp  TransformationTree.cpp  amcl_test.cpp  amcl_test_data.cpp  amcl_test_initialize.cpp  amcl_test_rtwutil.cpp  amcl_test_terminate.cpp  binaryOccupancyMap.cpp  geometry_msgs_PointStampedStruct.cpp  geometry_msgs_PointStruct.cpp  geometry_msgs_PoseStruct.cpp  geometry_msgs_QuaternionStruct.cpp  geometry_msgs_TransformStampedStruct.cpp  geometry_msgs_TransformStruct.cpp  geometry_msgs_Vector3Struct.cpp  ixfun.cpp  main.cpp  mod.cpp  monteCarloLocalization.cpp  nav_msgs_MapMetaDataStruct.cpp  nav_msgs_OccupancyGridStruct.cpp  odometryMotionModel.cpp  quat2eul.cpp  rosReadBinaryOccupancyGrid.cpp  rosReadCartesian.cpp  rosReadScanAngles.cpp  ros_TimeStruct.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  rtw_proj.tmw  sensor_msgs_LaserScanStruct.cpp  std_msgs_HeaderStruct.cpp  wrapTo2Pi.cpp  (+1 more)
amclLocal/jetsonBackup/catkin_ws/src/mandelbrot_populate/: CMakeLists.txt  package.xml  packageInfo.mat
amclLocal/jetsonBackup/catkin_ws/src/mandelbrot_populate/include/mandelbrot_populate/: Subscriber.h  mandelbrot_populate.h  mandelbrot_populate_data.h  mandelbrot_populate_initialize.h  mandelbrot_populate_terminate.h  mandelbrot_populate_types.h  mlroscpp_msgconvert_utils.h  ros_TimeStruct.h  ros_structmsg_conversion.h  rtwtypes.h  sensor_msgs_LaserScanStruct.h  std_msgs_HeaderStruct.h  visibility_control.h
amclLocal/jetsonBackup/catkin_ws/src/mandelbrot_populate/src/: Subscriber.cpp  main.cpp  mandelbrot_populate.cpp  mandelbrot_populate_data.cpp  mandelbrot_populate_initialize.cpp  mandelbrot_populate_terminate.cpp  ros_TimeStruct.cpp  ros_structmsg_conversion.cpp  rtw_proj.tmw  sensor_msgs_LaserScanStruct.cpp  std_msgs_HeaderStruct.cpp
amclLocal/jetsonBackup/catkin_ws/src/rs_rplidar/: CMakeLists.txt
amclLocal/jetsonBackup/catkin_ws/src/rs_rplidar/launch/: laser.launch
amclLocal/jetsonBackup/catkin_ws/src/test_launch/: package.xml
amclLocal/jetsonBackup/startScripts/: startLidar.sh  startMapping.sh  startRosBag.sh  startTf.sh
